--- a/style.css
+++ b/style.css
@@ -4,3 +4,181 @@
   margin: 0;
 }
 
+body {
+  color: white;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  letter-spacing: 30;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+header {
+  background: url('/images/background.jpg') no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+}
+
+header * {
+  z-index: 1;
+}
+
+.container {
+  max-width: 1028px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.sign-in a {
+  background-color: #e50914;
+  border-radius: 5px;
+  padding: 0.5rem 1.2rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+
+.sign-in a:hover,
+.unlimited-movies a:hover{
+  background: rgb(193,17,25);
+}
+
+/* Unlimited Movies */
+
+.movies-container {
+  display: flex;
+  justify-content: center;
+  height: 590px;
+}
+
+.unlimited-movies {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-self: center;
+}
+
+.unlimited-movies h1 {
+  font-size: 3rem;
+  font-weight: 900;
+}
+
+.unlimited-movies h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-top: 16px;
+}
+
+.unlimited-movies p {
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  line-height: 1.875rem;
+}
+
+.register {
+  display: flex;
+  align-items: center;
+  width: 586px;
+  margin: auto;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.register input {
+  height: 52px;
+  width: 69%;
+  border-radius: 5px;
+  outline: none;
+  background: rgba(0, 0, 0, 0.3);
+  color: white;
+  font-size: 18px;
+  border: 1px solid #636261;
+  padding: 10px;
+  padding-left: 15px;
+}
+
+.register input::placeholder {
+  color: #b8b8b8;
+}
+
+.register a {
+  background-color: #e50914;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  max-width: 30%;
+}
+
+.line {
+  height: 10px;
+  background-color: rgba(35, 35, 35, 1);
+}
+
+.flex-container {
+  display: flex;
+  padding-top: 72px;
+  padding-bottom: 72px;
+  background: black;
+}
+
+.text {
+  max-width: 48%;
+}
+.photo {
+  max-width: 48%;
+}
+
+.photo img {
+  width: 508px;
+}
+
+.text h2 {
+  font-size: 2.8rem;
+  font-weight: 900;
+}
+
+.text p {
+  font-size: 1.5rem;
+  font-weight: 400;
+  margin-top: 16px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
