--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ header::before {
 }
 
 .sign-in a:hover,
-.unlimited-movies a:hover{
+.unlimited-movies a:hover, 
+.faq a:hover {
   background: rgb(193,17,25);
 }
 
@@ -160,7 +161,98 @@ header::before {
   margin-top: 16px;
 }
 
+.faq {
+  padding-top: 72px;
+  padding-bottom: 56px;
+  background: black;
+}
 
+.faq-container {
+  max-width: 1028px;
+  margin: auto;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+}
+
+.faq-container h1 {
+  font-size: 3rem;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+
+.question-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 24px;
+  font-size: 26px;
+  width: 100%;
+  height: 84px;
+  background: #2d2d2d;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.question-section:hover {
+  background-color: #636060;
+}
+
+.plus {
+  font-size: 48px;
+}
+
+.ready { 
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.3rem;
+  margin-top: 24px;
+  margin-bottom: 16px;
+  line-height: 1.875rem;
+}
+
+footer {
+  padding-top: 72px;
+  padding-bottom: 72px;
+  background: black;
+}
+
+.footer-container {
+  max-width: 1028px;
+  margin: auto;
+}
+
+footer a {
+  color: rgba(255, 255, 255, 0.7);
+  text-decoration: underline;
+  font-size: 1rem;
+}
+
+.uzb {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 1rem;
+  margin-top: 30px;
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.first-section, 
+.second-section, 
+.third-section {
+  display: flex;
+  width: 33%;
+  flex-direction: column;
+}
+
+.first-section a, 
+.second-section a, 
+.third-section a {
+  margin-bottom: 10px;
+}
 
 
 
