--- a/style.css
+++ b/style.css
@@ -186,11 +186,11 @@ header::before {
   justify-content: space-between;
   align-items: center;
   padding: 24px;
-  font-size: 26px;
+  font-size: 24px;
   width: 100%;
   height: 84px;
   background: #2d2d2d;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   cursor: pointer;
 }
 
@@ -200,6 +200,10 @@ header::before {
 
 .plus {
   font-size: 48px;
+}
+
+.plus-rotate {
+  transform:  rotateY(180deg) rotate(45deg);
 }
 
 .ready { 
@@ -254,7 +258,19 @@ footer a {
   margin-bottom: 10px;
 }
 
+.hidden {
+  display: none;
+}
 
+.answer-section {
+  text-align: left;
+  padding: 24px;
+  font-size: 24px;
+  width: 100%;
+  background: #2d2d2d;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
 
 
 
